登陆注册优化

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -13,7 +13,7 @@
         android:layout_below="@id/toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:src="@drawable/login_logo" />
+        android:src="@drawable/login_logo1" />
 
     <TextView
         android:id="@+id/tv_home"
