--- a/app/src/main/res/layout/activity_forget_psw.xml
+++ b/app/src/main/res/layout/activity_forget_psw.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:src="@drawable/ic_login_phone" />
+                android:src="@drawable/ic_login_number" />
 
             <View
                 android:layout_width="1dp"
