--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -233,12 +233,23 @@
             android:text="绑定手机"/>
 
         <ImageView
+            android:id="@+id/iv_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrowright"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/iv_arrow"
+            android:gravity="center_vertical"
+            android:textSize="15sp"
+            android:textColor="#323232"
+            android:layout_marginRight="10dp"
+            android:text="绑定手机"/>
     </RelativeLayout>
 
     <View
