--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -41,11 +41,13 @@
     </android.support.v4.view.ViewPager>
 
     <View
+        android:id="@+id/view_super"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#30ffffff" />
 
     <LinearLayout
+        android:id="@+id/ll_super"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
